# proxmox-auto-migration

./: .gitignore  Cargo.toml  Makefile  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: CI.yml
src/: main.rs
