[package]
name = "auto_migration"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
duct = "0.13.5"
hostname = "0.3.1"
systemstat = "0.1.11"
tokio = { version = "1.20.1", features = ["full"]}
which = "4.2.5"

